k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-app
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 80          # exposed to other services / ingress
      targetPort: 7000  # container port
  type: ClusterIP      # internal by default
